@@ -1,3 +1,15 @@
+2010-06-12  Colin Watson  <cjwatson@ubuntu.com>
+
+	Avoid false positives in fs.lst, partmap.lst, and video.lst due to
+	prototype declarations.
+
+	* genmk.rb (PModule::rule): Define GRUB_LST_GENERATOR when
+	generating fs, partmap, and video lists.
+	* include/grub/fs.h (grub_fs_register): Omit prototype if
+	GRUB_LST_GENERATOR is defined.
+	* include/grub/partition.h (grub_partition_map_register): Likewise.
+	* include/grub/video.h (grub_video_register): Likewise.
+
 2010-06-12  Javier Martín <lordhabbit@gmail.com>
 
 	* include/grub/types.h: Check for GRUB_CPU_SIZEOF_LONG when appropriate.
